--- a/portfolioApp/src/Pages/Home.module.css
+++ b/portfolioApp/src/Pages/Home.module.css
@@ -41,7 +41,7 @@
     height: 400px;
     border-radius: 50%;
     object-fit: cover;
-    border: 6px solid #fdc448; 
+    border: 6px solid #fdc448;
 }
 
 .home_wrapper .orbit_container {
@@ -49,11 +49,13 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%) rotateX(45deg); 
+    width: 480px;
     height: 480px;
-    border: none; 
+    border: none;
     border-radius: 50%;
-    perspective: 1000px; 
+    perspective: 1000px;
     transform-style: preserve-3d; 
+    animation: orbit 10s infinite linear;
     transform-origin: center;
 }
 
