--- a/portfolioApp/src/index.css
+++ b/portfolioApp/src/index.css
@@ -1,33 +1,35 @@
 @import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;500;600;700&display=swap');
 
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-
     font-family: 'Rajdhani', sans-serif;
     font-weight: 500;
-
     list-style: none;
     text-decoration: none;
 }
 
-body{
+body {
     background-color: black;
     color: white;
 }
 
-:root{
+:root {
     --primary-color: #fdc448;
-
 }
 
-button{
+button {
     height: 40px;
     width: 140px;
-    background-color: var(--primary-color); 
+    background-color: var(--primary-color);
     color: #fff;
-    border:none;
+    border: none;
     font-weight: 600;
     cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+button:hover {
+    background-color: #e0b03d;
 }
