--- a/portfolioApp/src/Components/Nav/Nav.module.css
+++ b/portfolioApp/src/Components/Nav/Nav.module.css
@@ -7,13 +7,9 @@ nav {
     padding: 0 12%;
     position: relative;
     background: #1a1a1a;
+    padding-top: 10px;
 }
-  
-nav .logo span {
-    font-size: 30px;
-    font-weight: 800;
-    color: var(--primary-color);
-}
+
   
 nav ul li {
     display: inline-block;
